--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "ca.andydbc.unity-texture-packer":"https://github.com/andydbc/unity-texture-packer.git#0.1.0",
     "com.unity.animation.rigging": "1.1.1",
     "com.unity.cinemachine": "2.8.6",
     "com.unity.ide.visualstudio": "2.0.16",
